update Java学习笔记总结.md for jvm 单例 aop
Signed-off-by: 马哥私房菜 <https://shop592330910.taobao.com/>